--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -1,25 +1,86 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="r9x-NP-eWb">
+                                <rect key="frame" x="67" y="114" width="186" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="8HO-Hp-9CX"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="186" id="iqX-aO-lsp"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Login"/>
+                                    <segment title="Signup"/>
+                                </segments>
+                            </segmentedControl>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jPL-Je-wYY">
+                                <rect key="frame" x="67" y="179" width="186" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="r6Z-9a-3sJ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BGB-sA-UOM">
+                                <rect key="frame" x="67" y="217" width="186" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="r4n-eu-LNr"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bvq-bf-bNE">
+                                <rect key="frame" x="102" y="269" width="116" height="27"/>
+                                <color key="backgroundColor" red="0.89586117180000002" green="0.86907847670000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="116" id="IUJ-HY-tO3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Login"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bvq-bf-bNE" firstAttribute="top" secondItem="BGB-sA-UOM" secondAttribute="bottom" constant="22" id="1WE-nC-MZK"/>
+                            <constraint firstItem="jPL-Je-wYY" firstAttribute="top" secondItem="r9x-NP-eWb" secondAttribute="bottom" constant="37" id="AO9-Cx-saq"/>
+                            <constraint firstItem="jPL-Je-wYY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ELk-h8-pJI"/>
+                            <constraint firstItem="BGB-sA-UOM" firstAttribute="top" secondItem="jPL-Je-wYY" secondAttribute="bottom" constant="8" id="Iay-dI-ZnI"/>
+                            <constraint firstItem="r9x-NP-eWb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KmM-L9-J5t"/>
+                            <constraint firstItem="BGB-sA-UOM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LB5-Bx-hvv"/>
+                            <constraint firstItem="r9x-NP-eWb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="94" id="MWs-bN-hJN"/>
+                            <constraint firstItem="Bvq-bf-bNE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OWP-uf-6Uq"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="LoginAction" destination="Bvq-bf-bNE" id="t32-PN-445"/>
+                        <outlet property="btnLogin" destination="Bvq-bf-bNE" id="j6l-hu-mHd"/>
+                        <outlet property="btnSegment" destination="r9x-NP-eWb" id="RNd-bO-iKN"/>
+                        <outlet property="segmentAction" destination="r9x-NP-eWb" id="mtr-qi-8pM"/>
+                        <outlet property="txtEmail" destination="jPL-Je-wYY" id="oGh-XU-9ew"/>
+                        <outlet property="txtPwd" destination="BGB-sA-UOM" id="LeJ-xu-tp5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="209" y="245"/>
         </scene>
     </scenes>
 </document>
