--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -27,6 +27,9 @@
                                     <segment title="Login"/>
                                     <segment title="Signup"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="aFE-te-NwJ"/>
+                                </connections>
                             </segmentedControl>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jPL-Je-wYY">
                                 <rect key="frame" x="67" y="179" width="186" height="30"/>
@@ -54,6 +57,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Neq-lG-geM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -70,10 +76,8 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="LoginAction" destination="Bvq-bf-bNE" id="t32-PN-445"/>
                         <outlet property="btnLogin" destination="Bvq-bf-bNE" id="j6l-hu-mHd"/>
                         <outlet property="btnSegment" destination="r9x-NP-eWb" id="RNd-bO-iKN"/>
-                        <outlet property="segmentAction" destination="r9x-NP-eWb" id="mtr-qi-8pM"/>
                         <outlet property="txtEmail" destination="jPL-Je-wYY" id="oGh-XU-9ew"/>
                         <outlet property="txtPwd" destination="BGB-sA-UOM" id="LeJ-xu-tp5"/>
                     </connections>
