--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginUi" id="BYZ-38-t0r" customClass="ViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="r9x-NP-eWb">
-                                <rect key="frame" x="67" y="114" width="186" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="186" id="8HO-Hp-9CX"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="186" id="iqX-aO-lsp"/>
@@ -32,7 +32,6 @@
                                 </connections>
                             </segmentedControl>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jPL-Je-wYY">
-                                <rect key="frame" x="67" y="179" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="186" id="r6Z-9a-3sJ"/>
                                 </constraints>
@@ -41,7 +40,6 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BGB-sA-UOM">
-                                <rect key="frame" x="67" y="217" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="186" id="r4n-eu-LNr"/>
                                 </constraints>
@@ -50,8 +48,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bvq-bf-bNE">
-                                <rect key="frame" x="102" y="269" width="116" height="27"/>
-                                <color key="backgroundColor" red="0.89586117180000002" green="0.86907847670000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.89586117180000002" green="0.86907847670000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="116" id="IUJ-HY-tO3"/>
                                 </constraints>
@@ -62,7 +59,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Bvq-bf-bNE" firstAttribute="top" secondItem="BGB-sA-UOM" secondAttribute="bottom" constant="22" id="1WE-nC-MZK"/>
                             <constraint firstItem="jPL-Je-wYY" firstAttribute="top" secondItem="r9x-NP-eWb" secondAttribute="bottom" constant="37" id="AO9-Cx-saq"/>
@@ -74,7 +71,6 @@
                             <constraint firstItem="Bvq-bf-bNE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OWP-uf-6Uq"/>
                         </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="btnLogin" destination="Bvq-bf-bNE" id="j6l-hu-mHd"/>
                         <outlet property="btnSegment" destination="r9x-NP-eWb" id="RNd-bO-iKN"/>
@@ -85,6 +81,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="209" y="245"/>
+        </scene>
+        <!--Task View Controller-->
+        <scene sceneID="gfc-iA-uaH">
+            <objects>
+                <viewController storyboardIdentifier="taskUI" id="eV3-2f-M0q" customClass="TaskViewController" customModule="TaskApp" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MCp-qO-Nw0"/>
+                        <viewControllerLayoutGuide type="bottom" id="oAK-7s-gSh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="taskView" id="KuK-20-bvI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OuM-Mo-gI9">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="1yw-hG-wfy">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1yw-hG-wfy" id="Bhv-JI-LnQ">
+                                            <frame key="frameInset" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OuM-Mo-gI9" firstAttribute="top" secondItem="MCp-qO-Nw0" secondAttribute="bottom" id="1uH-1a-Boe"/>
+                            <constraint firstAttribute="trailing" secondItem="OuM-Mo-gI9" secondAttribute="trailing" id="Ztd-fh-ofc"/>
+                            <constraint firstItem="oAK-7s-gSh" firstAttribute="top" secondItem="OuM-Mo-gI9" secondAttribute="bottom" id="kcw-0F-tle"/>
+                            <constraint firstItem="OuM-Mo-gI9" firstAttribute="leading" secondItem="KuK-20-bvI" secondAttribute="leading" id="qhc-mV-hah"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d0Q-S3-neM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868" y="245"/>
         </scene>
     </scenes>
 </document>
