--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="1yw-hG-wfy">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1yw-hG-wfy" id="Bhv-JI-LnQ">
                                             <frame key="frameInset" width="375" height="44"/>
@@ -107,6 +107,24 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YdH-a3-Nk2">
+                                <frame key="frameInset" minY="20" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="4cZ-W5-utb">
+                                        <barButtonItem key="leftBarButtonItem" title="Logout" id="XEp-j6-9Qi">
+                                            <connections>
+                                                <action selector="logoutMe:" destination="eV3-2f-M0q" id="sG1-Iv-rDc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4CM-wc-TOq">
+                                            <connections>
+                                                <segue destination="kze-yY-lEQ" kind="presentation" id="jtd-f0-3F4"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -116,10 +134,65 @@
                             <constraint firstItem="OuM-Mo-gI9" firstAttribute="leading" secondItem="KuK-20-bvI" secondAttribute="leading" id="qhc-mV-hah"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d0Q-S3-neM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="868" y="245"/>
+            <point key="canvasLocation" x="868" y="244.22788605697153"/>
+        </scene>
+        <!--Add Task View Controller-->
+        <scene sceneID="ntt-Ow-fZz">
+            <objects>
+                <viewController id="kze-yY-lEQ" customClass="addTaskViewController" customModule="TaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mXS-pT-eFS"/>
+                        <viewControllerLayoutGuide type="bottom" id="n1Z-Ws-SlU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="G8w-Zm-Si8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Oq-0v-72z">
+                                <frame key="frameInset" minY="28" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="glF-Gv-JHI">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Cpg-Re-ky2">
+                                            <connections>
+                                                <action selector="closeMe:" destination="kze-yY-lEQ" id="h9r-sR-s0o"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Task" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D5O-Pu-Blf">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="266" id="Q84-cI-wFc"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xC-6q-mBB">
+                                <frame key="frameInset" minX="125" minY="222" width="124" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add Task"/>
+                                <connections>
+                                    <action selector="saveTask:" destination="kze-yY-lEQ" eventType="touchUpInside" id="W0B-KR-lz3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D5O-Pu-Blf" firstAttribute="top" secondItem="mXS-pT-eFS" secondAttribute="bottom" constant="139" id="9P3-En-LFW"/>
+                            <constraint firstItem="D5O-Pu-Blf" firstAttribute="centerX" secondItem="G8w-Zm-Si8" secondAttribute="centerX" id="Fa8-73-0QD"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SkY-Ph-7Ok" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1520.8" y="234.33283358320841"/>
         </scene>
     </scenes>
 </document>
