--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -94,23 +94,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OuM-Mo-gI9">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="1yw-hG-wfy">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1yw-hG-wfy" id="Bhv-JI-LnQ">
-                                            <frame key="frameInset" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="eV3-2f-M0q" id="AZY-0H-Bqh"/>
-                                    <outlet property="delegate" destination="eV3-2f-M0q" id="JJh-8S-m9k"/>
-                                </connections>
-                            </tableView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YdH-a3-Nk2">
                                 <frame key="frameInset" minY="20" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -118,7 +101,7 @@
                                     <navigationItem title="Title" id="4cZ-W5-utb">
                                         <barButtonItem key="leftBarButtonItem" title="Logout" id="XEp-j6-9Qi">
                                             <connections>
-                                                <action selector="logoutMe:" destination="eV3-2f-M0q" id="sG1-Iv-rDc"/>
+                                                <action selector="logout:" destination="eV3-2f-M0q" id="ua4-g6-uau"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="4CM-wc-TOq">
@@ -129,12 +112,29 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OuM-Mo-gI9">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="1yw-hG-wfy">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1yw-hG-wfy" id="Bhv-JI-LnQ">
+                                            <frame key="frameInset" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="eV3-2f-M0q" id="AZY-0H-Bqh"/>
+                                    <outlet property="delegate" destination="eV3-2f-M0q" id="JJh-8S-m9k"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="OuM-Mo-gI9" firstAttribute="top" secondItem="MCp-qO-Nw0" secondAttribute="bottom" id="1uH-1a-Boe"/>
+                            <constraint firstItem="OuM-Mo-gI9" firstAttribute="top" secondItem="MCp-qO-Nw0" secondAttribute="bottom" constant="44" id="1uH-1a-Boe"/>
                             <constraint firstAttribute="trailing" secondItem="OuM-Mo-gI9" secondAttribute="trailing" id="Ztd-fh-ofc"/>
-                            <constraint firstItem="oAK-7s-gSh" firstAttribute="top" secondItem="OuM-Mo-gI9" secondAttribute="bottom" id="kcw-0F-tle"/>
+                            <constraint firstItem="oAK-7s-gSh" firstAttribute="top" secondItem="OuM-Mo-gI9" secondAttribute="bottom" constant="8" id="kcw-0F-tle"/>
                             <constraint firstItem="OuM-Mo-gI9" firstAttribute="leading" secondItem="KuK-20-bvI" secondAttribute="leading" id="qhc-mV-hah"/>
                         </constraints>
                     </view>
@@ -146,7 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d0Q-S3-neM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1082" y="243"/>
+            <point key="canvasLocation" x="1608.8" y="241.52923538230885"/>
         </scene>
         <!--Add Task View Controller-->
         <scene sceneID="ntt-Ow-fZz">
